--- a/src/data/post/3d-printing.mdx
+++ b/src/data/post/3d-printing.mdx
@@ -1,7 +1,7 @@
 ---
 publishDate: 2025-04-15T00:00:00Z
 title: How to Get Started with Printers
-excerpt: 3d Printing. 3d Printing. 3d Printing. 3d Printing. 3d Printing. 3d Printing. 3d Printing. 3d Printing. 
+excerpt: 3d Printing. 3d Printing. 3d Printing. 3d Printing. 3d Printing. 3d Printing. 3d Printing. 3d Printing.
 image: ~/assets/images/prusa-core-one.jpg
 category: Technical
 tags:
@@ -31,7 +31,7 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapi
 
 ## A SubHeading
 
-* Item 1
-* Item 2
-* Item 3
-* Item 4
+- Item 1
+- Item 2
+- Item 3
+- Item 4
