Add wm blog post. Decrease text size

--- a/src/data/post/weather-station.mdx
+++ b/src/data/post/weather-station.mdx
@@ -7,7 +7,7 @@ image: ~/assets/images/weather-station-hero.png
 category: Projects
 tags:
   - projects
-  - retired
+  - showcase
 ---
 
 Data acquisition is a rapidly expanding field of Electrical Engineering, especially with the recent rise of Internet of Thngs (IoT) products.
